<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_avatar_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/ic_baseline_image"/>

   <androidx.cardview.widget.CardView
       android:elevation="8dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@android:color/white"
       android:layout_weight="1">
       <LinearLayout
           android:orientation="vertical"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:padding="16dp">
           <TextView
               android:id="@+id/text_ci_activity"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/ci"
               android:layout_gravity="center_horizontal"
               style="@style/TextAppearance.AppCompat.Title"/>
           <TextView
               android:id="@+id/text_name_activity"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/name"
               style="@style/TextAppearance.AppCompat.Title"/>
           <TextView
               android:id="@+id/text_lastname_activity"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/last_name"
               style="@style/TextAppearance.AppCompat.Title"/>

           <TextView
               android:id="@+id/text_phone_activity"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/telephone" />

           <TextView
               android:id="@+id/text_description_activity"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/description" />

       </LinearLayout>
   </androidx.cardview.widget.CardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_navigation_menu"
        android:layout_weight="0"/>

</LinearLayout>